--- a/CIMS.Model/CIMS.Model.csproj
+++ b/CIMS.Model/CIMS.Model.csproj
@@ -34,6 +34,7 @@
       <HintPath>E:\code\cats\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,7 +46,6 @@
   <ItemGroup>
     <Compile Include="DetailResult.cs" />
     <Compile Include="Employee.cs" />
-    <Compile Include="GCIMSDBContext.cs" />
     <Compile Include="IModelBase.cs" />
     <Compile Include="LabCategory.cs" />
     <Compile Include="Labratory.cs" />
